<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_your_trips"
            android:title="@string/your_trips" />
        <item
            android:id="@+id/nav_coupon"
            android:title="@string/coupon" />
        <item
            android:id="@+id/nav_wallet"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_passbook"
            android:title="@string/passbook" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>
