<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/clanpro_medium"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/rate_card"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_medium" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="76dp"
        android:layout_height="76dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/clanpro_narrnews"
        android:gravity="center"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/base_fare"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/base_fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:hint="@string/dash"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/fare_km"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/fare_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:hint="@string/dash"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/capacity"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_user"
            android:ellipsize="end"
            android:gravity="end"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>


    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ellipsize="end"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp" />

</LinearLayout>