<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".ui.activity.payment.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/clanpro_medium"
                android:padding="16dp"
                android:text="@string/card_payment"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_medium"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cards_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:ellipsize="end"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/add_card_for_payments"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_small"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/cc_avenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_visa"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:visibility="gone"
                android:singleLine="true"
                android:text="@string/by_ccavenue"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/flutter_wave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_visa"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/flutterwave"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/clanpro_medium"
                android:padding="16dp"
                android:text="@string/other_payment"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_money"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/by_cash"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_small" />
        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>