<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/non_geo_fencing_total"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/non_geo_fencing_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/dash"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/geo_fencing_total"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/geo_fencing_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/dash"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:text="@string/close"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_small" />

    </LinearLayout>


</LinearLayout>