<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/pick_location_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFF"
        android:elevation="1dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:text="Pickup Location"
            android:textSize="@dimen/_10ssp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/clanpro_narrnews"
            android:gravity="center_vertical"
            android:hint="@string/pickup_location"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFF"
        android:elevation="1dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:text="@string/drop_location"
            android:textSize="@dimen/_10ssp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/clanpro_narrnews"
            android:gravity="center_vertical"
            android:hint="@string/where_to"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>


</LinearLayout>